# aind-data-asset-indexer

./: .env.template  .flake8  .gitignore  .readthedocs.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish_dev.yml  publish_main.yml  tag_and_publish.yml
code/: .env.template  main.py  run
code/aind_data_asset_indexer/: __init__.py  job.py
docs/source/: Contributing.rst  UserGuide.rst  aind_data_asset_indexer.rst  conf.py  index.rst  modules.rst
environment/: Dockerfile  environment.yml  postInstall
metadata/: metadata.yml
src/aind_data_asset_indexer/: __init__.py  aind_bucket_indexer.py  codeocean_bucket_indexer.py  index_aind_buckets.py  models.py  mongo_configs.py  populate_aind_buckets.py  populate_metadata_json.py  populate_metadata_json_files.py  populate_s3_with_metadata_files.py  run.sh  run_job.py  s3_crawler.py  update_docdb.py  update_s3.py  utils.py
tests/: test_aind_bucket_indexer.py  test_codeocean_bucket_indexer.py  test_docdb_updater.py  test_index_aind_buckets.py  test_job_runner.py  test_models.py  test_populate_aind_buckets.py  test_populate_metadata_json.py  test_populate_s3_with_metadata_files.py  test_s3_crawler.py  test_utils.py
tests/resources/metadata_dir/ecephys_test_1/: data_description.json  metadata.nd.json
tests/resources/metadata_dir/ecephys_test_2/: metadata.nd.json
tests/resources/utils/: example_get_object_response1.json  example_get_object_response2.json  example_head_object_response1.json  example_head_object_response2.json  example_head_object_response3.json  example_list_objects_response.json  example_list_objects_response_false.json  example_list_objects_response_none.json  example_list_objects_response_unexpected.json  example_metadata.nd.json  example_metadata1.nd.json  example_metadata2.nd.json  example_pages_response.json  example_put_object_response1.json  example_search_co_assets.json  processing.json  subject.json
